<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ecommerce.fragments.ECommerceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/rlSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_13sdp"
                android:background="@drawable/search_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rlCart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageSearch"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_search_outline" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/imageSearch"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/welcome_sub_title"
                    android:textSize="@dimen/_10ssp" />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rlCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_13sdp"
                android:background="@drawable/search_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageCart"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_shopping_bag"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tvCartCount"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textSize="@dimen/_8ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/background_red"
                    app:layout_constraintTop_toTopOf="@id/imageCart"
                    app:layout_constraintBottom_toTopOf="@id/imageCart"
                    app:layout_constraintStart_toEndOf="@id/imageCart"
                    app:layout_constraintEnd_toEndOf="@id/imageCart"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSearch">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/bannerViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/containerCategories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_13sdp"
                            android:layout_marginEnd="@dimen/_13sdp"
                            android:fontFamily="@font/poppins_bold"
                            android:includeFontPadding="false"
                            android:text="@string/categories"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintBottom_toBottomOf="@id/btnViewAllCategories"
                            app:layout_constraintEnd_toStartOf="@id/btnViewAllCategories"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/btnViewAllCategories" />

                        <Button
                            android:id="@+id/btnViewAllCategories"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:text="@string/view_all"
                            android:visibility="invisible"
                            android:textAllCaps="false"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_10ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewCategories"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:orientation="horizontal"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10ssp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btnViewAllCategories"
                            tools:listitem="@layout/item_category" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/containerTrendingProducts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_13sdp"
                            android:layout_marginEnd="@dimen/_13sdp"
                            android:fontFamily="@font/poppins_bold"
                            android:includeFontPadding="false"
                            android:text="@string/trending_products"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintBottom_toBottomOf="@id/btnViewAllTrendingProducts"
                            app:layout_constraintEnd_toStartOf="@id/btnViewAllTrendingProducts"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/btnViewAllTrendingProducts" />

                        <Button
                            android:id="@+id/btnViewAllTrendingProducts"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:text="@string/view_all"
                            android:textAllCaps="false"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_10ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewTrendingProducts"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:orientation="horizontal"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/_13sdp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btnViewAllTrendingProducts"
                            tools:listitem="@layout/item_producta" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/containerPopularProducts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_13sdp"
                            android:layout_marginEnd="@dimen/_13sdp"
                            android:fontFamily="@font/poppins_bold"
                            android:includeFontPadding="false"
                            android:text="@string/popular_products"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintBottom_toBottomOf="@id/btnViewAllPopularProducts"
                            app:layout_constraintEnd_toStartOf="@id/btnViewAllPopularProducts"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/btnViewAllPopularProducts" />

                        <Button
                            android:id="@+id/btnViewAllPopularProducts"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:text="@string/view_all"
                            android:textAllCaps="false"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_10ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewPopularProducts"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:orientation="horizontal"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/_13sdp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btnViewAllPopularProducts"
                            tools:listitem="@layout/item_producta" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            app:lottie_rawRes="@raw/dot_loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieComingSoon"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/coming_soon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coming Soon"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_below="@id/lottieComingSoon"
            android:shadowColor="@color/secondary_text"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_24ssp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"/>

    </RelativeLayout>

</FrameLayout>